# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phntmzn-dreamcore-sweepforge"
version = "0.1.0"
description = "Batch-generate 100 unique 66s sine-frequency sweeps (3–5 kHz) at 48 kHz +6 dB with peak-safe limiting, exported to WAV for PHNTMZN/DReAMCORE."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "PHNTMZN" }]
dependencies = [
  "numpy>=1.23",
  "soundfile>=0.12",
]

[project.urls]
Repository = "https://github.com/YOURNAME/phntmzn-dreamcore-sweepforge"

[project.scripts]
dreamcore-sweepforge = "dreamcore_sweepforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
